# CursoCBasico

./: .gitignore
Diagramas/: Diagrama1.dia  Diagrama1.dia~
FirstStepsInC/: printScanVariables  printScanVariables.c  sentences.c
HelloWorld/: HolaMundo  HolaMundo.c
controlSentences/: CMakeLists.txt  SentenciasDeControl.c
controlSentences/application/: CMakeLists.txt  comparacion.c  comparacion.h
